--- a/lib/anna_web/templates/dashboard/index.html.eex
+++ b/lib/anna_web/templates/dashboard/index.html.eex
@@ -7,6 +7,9 @@
     <title>Analytics</title>
     <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="/css/theme.min.css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+
 
   </head>
   <body>
@@ -313,6 +316,7 @@
         </div> <!-- / .row -->
         <div class="row">
           <div class="col-12">
+            <h2>React App</h2>
             <div id="first-chart-react"></div>
           </div>
         </div> <!-- / .row -->
@@ -356,7 +360,7 @@
 
     </div><!-- / .main-content -->
 
-    <script defer type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
+
     <script src="<%= Routes.static_path(@conn, "/js/firstChart.js") %>"></script>
   </body>
 </html>
